[gd_scene load_steps=11 format=3 uid="uid://gjnoxtngguo5"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/variable_create_dialog/VariableCreateDialogContents.gd" id="1_dookr"]
[ext_resource type="Texture2D" uid="uid://yw0o1piqpci0" path="res://addons/hyh.cutscene_graph/icons/icon_scope_transient_light.svg" id="1_tvrdr"]
[ext_resource type="Texture2D" uid="uid://obagryd77fku" path="res://addons/hyh.cutscene_graph/icons/icon_scope_local_light.svg" id="2_8fln5"]
[ext_resource type="Texture2D" uid="uid://daoewvcifx34k" path="res://addons/hyh.cutscene_graph/icons/icon_scope_cutscene_light.svg" id="3_mw4li"]
[ext_resource type="Texture2D" uid="uid://dqtx77gjre00a" path="res://addons/hyh.cutscene_graph/icons/icon_scope_global_light.svg" id="3_u3s13"]
[ext_resource type="Texture2D" uid="uid://c3kvtyvnpubei" path="res://addons/hyh.cutscene_graph/icons/icon_type_bool.svg" id="4_gj26j"]
[ext_resource type="Texture2D" uid="uid://mksqvoqy2yi4" path="res://addons/hyh.cutscene_graph/icons/icon_node_warning.svg" id="5_pvmf8"]
[ext_resource type="Texture2D" uid="uid://dhxdv15boo0xg" path="res://addons/hyh.cutscene_graph/icons/icon_type_float.svg" id="5_w3epv"]
[ext_resource type="Texture2D" uid="uid://dgqyr3ih37my0" path="res://addons/hyh.cutscene_graph/icons/icon_type_int.svg" id="6_tonvp"]
[ext_resource type="Texture2D" uid="uid://dpd5q8k0oueoh" path="res://addons/hyh.cutscene_graph/icons/icon_type_string.svg" id="7_qfrlk"]

[node name="VariableCreateDialogContents" type="MarginContainer"]
offset_right = 360.0
offset_bottom = 300.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_dookr")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GC" type="GridContainer" parent="VB"]
layout_mode = 2
columns = 3

[node name="Label2" type="Label" parent="VB/GC"]
layout_mode = 2
text = "Scope:
"

[node name="ScopeOption" type="OptionButton" parent="VB/GC"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "Transient"
popup/item_0/icon = ExtResource("1_tvrdr")
popup/item_0/id = 0
popup/item_1/text = "Cutscene"
popup/item_1/icon = ExtResource("3_mw4li")
popup/item_1/id = 1
popup/item_2/text = "Local"
popup/item_2/icon = ExtResource("2_8fln5")
popup/item_2/id = 2
popup/item_3/text = "Global"
popup/item_3/icon = ExtResource("3_u3s13")
popup/item_3/id = 3

[node name="ScopeValidationWarning" type="TextureRect" parent="VB/GC"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
tooltip_text = "Scope is required."
texture = ExtResource("5_pvmf8")
stretch_mode = 3

[node name="Label3" type="Label" parent="VB/GC"]
layout_mode = 2
text = "Type:"

[node name="TypeOption" type="OptionButton" parent="VB/GC"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "Boolean"
popup/item_0/icon = ExtResource("4_gj26j")
popup/item_0/id = 1
popup/item_1/text = "Float"
popup/item_1/icon = ExtResource("5_w3epv")
popup/item_1/id = 3
popup/item_2/text = "Integer"
popup/item_2/icon = ExtResource("6_tonvp")
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/icon = ExtResource("7_qfrlk")
popup/item_3/id = 4

[node name="TypeValidationWarning" type="TextureRect" parent="VB/GC"]
layout_mode = 2
tooltip_text = "Type is required."
texture = ExtResource("5_pvmf8")
stretch_mode = 3

[node name="Label" type="Label" parent="VB/GC"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VB/GC"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Variable Name..."

[node name="NameValidationWarning" type="TextureRect" parent="VB/GC"]
layout_mode = 2
tooltip_text = "Name is required, and must not
consist of whitespace."
texture = ExtResource("5_pvmf8")
stretch_mode = 3

[node name="Label4" type="Label" parent="VB"]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="TextEdit" parent="VB"]
custom_minimum_size = Vector2(0, 93)
layout_mode = 2
placeholder_text = "Enter a description..."
wrap_mode = 1

[node name="Label" type="Label" parent="VB"]
layout_mode = 2
text = "Tags:"

[node name="TagContainer" type="HFlowContainer" parent="VB"]
custom_minimum_size = Vector2(0, 133)
layout_mode = 2

[node name="TagEdit" type="LineEdit" parent="VB/TagContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
placeholder_text = "Add New Tag..."

[node name="SuggestionsContainer" type="HFlowContainer" parent="VB/TagContainer"]
custom_minimum_size = Vector2(340, 31)
layout_mode = 2

[node name="MC" type="MarginContainer" parent="VB"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="FooterButtonsContainer" type="HBoxContainer" parent="VB/MC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="CancelButton" type="Button" parent="VB/MC/FooterButtonsContainer"]
layout_mode = 2
text = "Cancel"

[node name="CreateButton" type="Button" parent="VB/MC/FooterButtonsContainer"]
layout_mode = 2
text = "Create"

[connection signal="item_selected" from="VB/GC/ScopeOption" to="." method="_on_scope_option_item_selected"]
[connection signal="item_selected" from="VB/GC/TypeOption" to="." method="_on_type_option_item_selected"]
[connection signal="text_changed" from="VB/GC/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_changed" from="VB/TagContainer/TagEdit" to="." method="_on_tag_edit_text_changed"]
[connection signal="text_submitted" from="VB/TagContainer/TagEdit" to="." method="_on_tag_edit_text_submitted"]
[connection signal="pressed" from="VB/MC/FooterButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VB/MC/FooterButtonsContainer/CreateButton" to="." method="_on_create_button_pressed"]
